# mgv

./: Ghostview.c  INSTALL  MGv.ad.in  Makefile.am  README.md  RELEASE_NOTES  app.c  auto.c  center.c  configure.in  dsc.c  error.c  file.c  help.c  log.c  magstep.c  main.c  mark.c  mark_action.c  mark_range.c  media.c  mgv.c  mgv_create.c  options.c  orientation.c  page.c  page_control.c  print.c  scroll.c  strings.c  toolbar.c  track.c  uiutil.c  unmangle.c  view.c  zoom.c
.nodist/: icon.xcf  log-icon.xcf  mgv.icon.xcf  mgv.icon2.xcf  mgv.icon3.xcf  splash.xcf
ad/: aboutDialog.ad  actions.ad  bldoptsDialog.ad  closeProblemsDialog.ad  fileMenu.ad  fileOpen.ad  fileSave.ad  helpMenu.ad  infoDialog.ad  logDialog.ad  magstepDialog.ad  magstepMenu.ad  mainWindow.ad  markMenu.ad  markRangeDialog.ad  mediaMenu.ad  menuBar.ad  optionsMenu.ad  orientationMenu.ad  pageMenu.ad  popupMenu.ad  printDialog.ad  reallyExitDialog.ad  statusLine.ad  strings.ad  toolBar.ad  viewMenu.ad  zoom.ad  zoomMenu.ad
config/: cc.m4  motif.m4  xpm.m4
doc/: Makefile.am  mgv.sgml-in
lib/: Makefile.am  README  log-icon.xbm  log-icon.xpm  log-mask.xbm  mgv-icon.xbm  mgv-icon.xpm  mgv-mask.xbm  mgv.icon  mgv.icon.2  mgv.icon.3  splash.xbm  splash.xpm
lib/toolbar/: Makefile.am  fileOpen-i.xpm  fileOpen.xpm  filePrint-i.xpm  filePrint.xpm  helpContext-i.xpm  helpContext.xpm  magstepDecr-i.xpm  magstepDecr.xpm  magstepIncr-i.xpm  magstepIncr.xpm  mark-i.xpm  mark.xpm  markAll-i.xpm  markAll.xpm  markEven-i.xpm  markEven.xpm  markInvert-i.xbm  markInvert-i.xpm  markInvert.xbm  markInvert.xpm  markNone-i.xpm  markNone.xpm  markOdd-i.xpm  markOdd.xpm  pageNext-i.xpm  pageNext.xpm  pagePrev-i.xpm  pagePrev.xpm
mine/: Ghostview.h  GhostviewP.h  app.h  auto.h  center.h  dsc.h  error.h  file.h  help.h  log.h  magstep.h  mark.h  media.h  mgv.h  opaque.h  options.h  orientation.h  page.h  page_control.h  print.h  scroll.h  sens.h  strdefs.h  strings.h  toolbar.h  track.h  uiutil.h  unmangle.h  view.h  zoom.h
tools/: ad2c.1  bld  mkinstalldirs  mkresm4  mkver  mudep  release  sgmlpp  yanksect
wlib/: Makefile.am  WlAppShell.c  WlSplashScreen.c  WlToolBar.c  about.c  app.c  appclass.c  assert.c  callback.c  chkver.c  create.c  dismiss.c  dlg.c  error.c  fgbg.c  find.c  findup.c  focus.c  free_pixmap.c  help-html.c  help-remote.c  help.c  icons.c  init.c  log.c  popdown_dialog.c  popup_dialog.c  popup_menu.c  process.c  res.c  scrollbar.c  sens.c  shell.c  shutdown.c  status.c  strings.c  text.c  togglesync.c  top.c  util.c  (+4 more)
wlib/wlib/: WlAppShell.ad  WlAppShell.h  WlAppShellP.h  WlSplashScreen.ad  WlSplashScreen.h  WlSplashScreenP.h  WlToolBar-iunknown.xbm  WlToolBar-iunknown.xpm  WlToolBar-unknown.xbm  WlToolBar-unknown.xpm  WlToolBar.h  WlToolBarP.h  about.ad  about.h  app.h  appP.h  bldopts.ad  build.h  callbacks.h  display.h  fonts.ad  help.h  helpClose-i.xbm  helpClose-i.xpm  helpClose.xbm  helpClose.xpm  helpLinkNext-i.xbm  helpLinkNext-i.xpm  helpLinkNext.xbm  helpLinkNext.xpm  helpLinkPrev-i.xbm  helpLinkPrev-i.xpm  helpLinkPrev.xbm  helpLinkPrev.xpm  helpLinkTOC-i.xbm  helpLinkTOC-i.xpm  helpLinkTOC.xbm  helpLinkTOC.xpm  helpNext-i.xbm  helpNext-i.xpm  (+30 more)
